Fix button show password height on Safari

--- a/themes/classic/_dev/css/partials/_commons.scss
+++ b/themes/classic/_dev/css/partials/_commons.scss
@@ -153,7 +153,7 @@ small.label, small.value {
       text-transform: uppercase;
       &[data-action="show-password"]{
         background: $gray;
-        height: 100%;
+        height: 38px;
       }
     }
   }
